fix(App) No text wrapping in related list

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -1656,7 +1656,8 @@ ul.unstyled{
 .listViewEntries .relatedListEntryValues .value{
     vertical-align: middle;
 	width: 80%;
-	display: inline-block;
+    display: inline-block;
+    max-width: 300px;
 }
 
 .floatThead-table{
@@ -8664,4 +8665,20 @@ body .fc {
         border-width: thin;
         padding: 30px;
     }
+}
+
+#vt-mask{
+    border: 0;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    left: 0;
+    top: 0;
+    min-height: 100%;
+    min-width: 100%;
+    height: auto;
+    width: auto;
+    opacity: 0;
+    z-index: 10001;
+    background-color: #fff;
 }
